Operations can be done now

--- a/index.html
+++ b/index.html
@@ -34,56 +34,56 @@
       </div>
     </div>
     <div id="screen">
-      <p id="screen-text">399,981</p>
+      <p id="screen-text">0</p>
     </div>
     <div class="btn-section">
-      <div>
-        <div class="btn-n">
+      <div class="btn-row">
+        <div class="btn-n" id="7">
           <p>7</p>
         </div>
-        <div class="btn-n">
+        <div class="btn-n" id="8">
           <p>8</p>
         </div>
-        <div class="btn-n">
+        <div class="btn-n" id="9">
           <p>9</p>
         </div>
-        <div class="btn-s">
+        <div class="btn-s" id="del">
           <p>DEL</p>
         </div>
       </div>
-      <div>
-        <div class="btn-n">
+      <div class="btn-row">
+        <div class="btn-n" id="4">
           <p>4</p>
         </div>
-        <div class="btn-n">
+        <div class="btn-n" id="5">
           <p>5</p>
         </div>
-        <div class="btn-n">
+        <div class="btn-n" id="6">
           <p>6</p>
         </div>
         <div class="btn-n" id="+">
           <p>+</p>
         </div>
       </div>
-      <div>
-        <div class="btn-n">
+      <div class="btn-row">
+        <div class="btn-n" id="1">
           <p>1</p>
         </div>
-        <div class="btn-n">
+        <div class="btn-n" id="2">
           <p>2</p>
         </div>
-        <div class="btn-n">
+        <div class="btn-n" id="3">
           <p>3</p>
         </div>
         <div class="btn-n" id="-">
           <p>-</p>
         </div>
       </div>
-      <div>
-        <div class="btn-n">
+      <div class="btn-row">
+        <div class="btn-n" id=".">
           <p>.</p>
         </div>
-        <div class="btn-n">
+        <div class="btn-n" id="0">
           <p>0</p>
         </div>
         <div class="btn-n" id="/">
@@ -93,7 +93,7 @@
           <p>x</p>
         </div>
       </div>
-      <div>
+      <div class="btn-row">
         <div class="btn-s" id="reset">
           <p>RESET</p>
         </div>
@@ -103,5 +103,7 @@
       </div>
     </div>
   </main>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
