--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Calculator app</title>
-  <link id="theme-1" rel="stylesheet" href="style.css">
+  <link id="theme-style" rel="stylesheet" href="style1.css">
   <!--Spartan from Google Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -89,7 +89,7 @@
         <div class="btn-n" id="/">
           <p>/</p>
         </div>
-        <div class="btn-n" id="x">
+        <div class="btn-n" id="*">
           <p>x</p>
         </div>
       </div>
